--- a/.github/workflows/compile-resume.yaml
+++ b/.github/workflows/compile-resume.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up LaTeX
-        uses: dante-ev/latex-action@v2
+        uses: fudan-mse/latex-action@v0.0.1
         with:
           root_file: resume.tex
 
